Archive2/e3/5836cb18ca3cf5/output
main.cpp:3:16: warning: missing terminating " character
     std::cout<<"hello,World!\n;
                ^
main.cpp:3:5: error: missing terminating " character
     std::cout<<"hello,World!\n;
     ^
main.cpp: In function 'int main()':
main.cpp:3:5: error: 'cout' is not a member of 'std'
main.cpp:4:5: error: expected primary-expression before 'return'
     return 0;
     ^
