Archive2/e3/5836cb18ca3cf5/main.cpp
#include<stdio.h>
int main(){
    std::cout<<"hello,World!\n;
    return 0;
}